fix: resolve JPA repository method naming issues for Department entity
- Update repository methods to use correct property paths (departmentId vs id)
- Fix service and controller parameter types to match String IDs
- Application now starts successfully without JPA query creation errors